# d2r-desktop

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts  widget.html
.github/workflows/: build-windows.yml  build.yml  ci.yml
.kiro/steering/: workflow.md
docs/: DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_V3.md  DEVELOPMENT_PLAN_V4.md  SUGGESTIONS.md
src/: App.css  App.tsx  api.ts  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: query_bench.rs
src-tauri/capabilities/: default.json
src-tauri/data/: tc_data.json
src-tauri/proptest-regressions/: probability_engine.txt
src-tauri/src/: achievements.rs  commands.rs  coop.rs  db.rs  drop_commands.rs  lib.rs  main.rs  models.rs  overlay_commands.rs  probability_engine.rs  sync.rs
src-tauri/src/screenshot/: matcher.rs  mod.rs  monitor.rs  ocr.rs  parser.rs  settings.rs
src/advisor/: advisor-engine.test.ts  advisor-engine.ts
src/components/: AdvisorComponents.test.tsx  AreaRankingTable.tsx  BuildSuggestions.tsx  CloudSyncSettings.test.tsx  CloudSyncSettings.tsx  ConfirmationDialog.test.tsx  ConfirmationDialog.tsx  CubeCalculator.tsx  DiminishingReturnsAlert.tsx  EligibilityList.tsx  ItemSearch.test.tsx  ItemSearch.tsx  ItemSearchSelect.css  ItemSearchSelect.test.tsx  ItemSearchSelect.tsx  MFCalculator.test.tsx  MFCalculator.tsx  ProgressView.tsx  QuickTags.test.tsx  QuickTags.tsx  RuneCell.property.test.tsx  RuneCell.test.tsx  RuneCell.tsx  RuneGrid.test.tsx  RuneGrid.tsx  ScreenshotSettings.test.tsx  ScreenshotSettings.tsx  (+15 more)
(+164 files in other folders)
